// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ComplianceBlock renders v1 shape (tasksFractional undefined) 1`] = `
<div>
  <div
    class="rounded-xl border border-white/5 bg-white/[0.02] px-4 py-3"
  >
    <div
      class="flex items-center gap-4 text-sm flex-wrap"
    >
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          Jobs:
        </span>
        <span
          class="font-semibold text-slate-200"
        >
          8
          /
          10
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          On-time:
        </span>
        <span
          class="font-semibold"
          style="color: rgb(234, 179, 8);"
        >
          80
          %
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
          title="Used / On-time: how often OOW status was hit, and — of those — how often before scheduled start"
        >
          OOW (use/punct):
        </span>
        <span
          class="font-semibold text-sm"
        >
          <span
            style="color: rgb(234, 179, 8);"
          >
            60%
          </span>
          <span
            class="text-slate-600 mx-0.5"
          >
            /
          </span>
          <span
            style="color: rgb(234, 179, 8);"
          >
            75%
          </span>
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          Stuck:
        </span>
        <span
          class="font-semibold"
          style="color: rgb(34, 197, 94);"
        >
          0
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          Not started:
        </span>
        <span
          class="font-semibold text-yellow-400"
        >
          1
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          Avg to Complete:
        </span>
        <span
          class="font-semibold text-slate-300"
        >
          2.5
        </span>
      </div>
    </div>
    <div
      class="mt-3 border-t border-white/5 pt-2"
    >
      <div
        class="text-[10px] font-semibold text-slate-500 tracking-wider mb-1"
      >
        CREW PERFORMANCE
      </div>
      <div
        class="text-[9px] text-slate-600 leading-snug mb-2 space-y-0.5"
      >
        <div>
          Score is computed per service task you were assigned to or submitted. If you worked a job but weren't assigned to a specific task in Zuper, it won't count.
        </div>
        <div>
          <span
            class="text-slate-500 font-medium"
          >
            Score
          </span>
           = On-time%
          <span
            class="text-red-400/70"
          >
             − Stuck%
          </span>
          <span
            class="text-red-400/70"
          >
             − Not-started%
          </span>
          <span
            class="mx-1.5 text-slate-700"
          >
            |
          </span>
          <span
            class="text-slate-500 font-medium"
          >
            Grade
          </span>
          :
           
          A ≥90 · B ≥80 · C ≥70 · D ≥60 · F &lt;60
        </div>
      </div>
      <div
        class="grid grid-cols-[1fr_40px_48px_72px_64px_40px_48px_48px_80px] gap-1 text-[9px] text-slate-600 font-medium mb-0.5 px-0.5"
      >
        <span>
          Name
        </span>
        <span
          class="text-center"
        >
          Grade
        </span>
        <span
          class="text-right"
        >
          On-time
        </span>
        <span
          class="text-right"
        >
          OOW u/p
        </span>
        <span
          class="text-right"
        >
          Tasks/Jobs
        </span>
        <span
          class="text-right"
        >
          Pass
        </span>
        <span
          class="text-right"
        >
          Stuck
        </span>
        <span
          class="text-right"
        >
          Avg d
        </span>
        <span
          class="text-right"
        >
          Score
        </span>
      </div>
      <div
        class="grid gap-0.5"
      >
        <div
          class="grid grid-cols-[1fr_40px_48px_72px_64px_40px_48px_48px_80px] gap-1 text-xs items-center px-0.5 py-0.5 rounded hover:bg-white/[0.02]"
        >
          <span
            class="text-slate-300 font-medium truncate flex items-center gap-1"
          >
            Jane
          </span>
          <span
            class="text-center font-bold text-sm"
            style="color: rgb(59, 130, 246);"
          >
            B
          </span>
          <span
            class="text-right font-semibold"
            style="color: rgb(234, 179, 8);"
          >
            80
            %
          </span>
          <span
            class="text-right"
          >
            <span
              class="font-semibold text-xs"
            >
              <span
                style="color: rgb(239, 68, 68);"
              >
                50%
              </span>
              <span
                class="text-slate-600 mx-0.5"
              >
                /
              </span>
              <span
                style="color: rgb(234, 179, 8);"
              >
                60%
              </span>
            </span>
          </span>
          <span
            class="text-right text-slate-400 whitespace-nowrap"
          >
            8/10
          </span>
          <span
            class="text-right text-slate-600"
          >
            —
          </span>
          <span
            class="text-right text-green-500/50"
          >
            0
          </span>
          <span
            class="text-right text-slate-400"
          >
            2
          </span>
          <span
            class="text-right text-[10px] text-slate-400 font-mono whitespace-nowrap"
          >
            80
            <span
              class="text-slate-600"
            >
              =
            </span>
            <span
              class="font-semibold"
              style="color: rgb(59, 130, 246);"
            >
              80
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ComplianceBlock renders v2 shape with hasFollowUp + low-volume 1`] = `
<div>
  <div
    class="rounded-xl border border-white/5 bg-white/[0.02] px-4 py-3"
  >
    <div
      class="flex items-center gap-4 text-sm flex-wrap"
    >
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          Jobs:
        </span>
        <span
          class="font-semibold text-slate-200"
        >
          8
          /
          10
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          On-time:
        </span>
        <span
          class="font-semibold"
          style="color: rgb(234, 179, 8);"
        >
          80
          %
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
          title="Used / On-time: how often OOW status was hit, and — of those — how often before scheduled start"
        >
          OOW (use/punct):
        </span>
        <span
          class="font-semibold text-sm"
        >
          <span
            style="color: rgb(234, 179, 8);"
          >
            60%
          </span>
          <span
            class="text-slate-600 mx-0.5"
          >
            /
          </span>
          <span
            style="color: rgb(234, 179, 8);"
          >
            75%
          </span>
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          Stuck:
        </span>
        <span
          class="font-semibold"
          style="color: rgb(34, 197, 94);"
        >
          0
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          Not started:
        </span>
        <span
          class="font-semibold text-yellow-400"
        >
          1
        </span>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <span
          class="text-slate-500 text-xs"
        >
          Avg to Complete:
        </span>
        <span
          class="font-semibold text-slate-300"
        >
          2.5
        </span>
      </div>
    </div>
    <div
      class="mt-3 border-t border-white/5 pt-2"
    >
      <div
        class="text-[10px] font-semibold text-slate-500 tracking-wider mb-1"
      >
        CREW PERFORMANCE
      </div>
      <div
        class="text-[9px] text-slate-600 leading-snug mb-2 space-y-0.5"
      >
        <div>
          Score is computed per service task you were assigned to or submitted. If you worked a job but weren't assigned to a specific task in Zuper, it won't count.
        </div>
        <div>
          <span
            class="text-slate-500 font-medium"
          >
            Score
          </span>
           = On-time%
          <span
            class="text-red-400/70"
          >
             − Stuck%
          </span>
          <span
            class="text-red-400/70"
          >
             − Not-started%
          </span>
          <span
            class="mx-1.5 text-slate-700"
          >
            |
          </span>
          <span
            class="text-slate-500 font-medium"
          >
            Grade
          </span>
          :
           
          A ≥90 · B ≥80 · C ≥70 · D ≥60 · F &lt;60
        </div>
      </div>
      <div
        class="grid grid-cols-[1fr_40px_48px_72px_64px_40px_48px_48px_80px] gap-1 text-[9px] text-slate-600 font-medium mb-0.5 px-0.5"
      >
        <span>
          Name
        </span>
        <span
          class="text-center"
        >
          Grade
        </span>
        <span
          class="text-right"
        >
          On-time
        </span>
        <span
          class="text-right"
        >
          OOW u/p
        </span>
        <span
          class="text-right"
        >
          Tasks/Jobs
        </span>
        <span
          class="text-right"
        >
          Pass
        </span>
        <span
          class="text-right"
        >
          Stuck
        </span>
        <span
          class="text-right"
        >
          Avg d
        </span>
        <span
          class="text-right"
        >
          Score
        </span>
      </div>
      <div
        class="grid gap-0.5"
      >
        <div
          class="grid grid-cols-[1fr_40px_48px_72px_64px_40px_48px_48px_80px] gap-1 text-xs items-center px-0.5 py-0.5 rounded hover:bg-white/[0.02]"
        >
          <span
            class="text-slate-300 font-medium truncate flex items-center gap-1"
          >
            Jane
            <span
              class="text-[8px] px-1 py-[1px] rounded bg-yellow-900/40 text-yellow-300 font-semibold"
              title="Completed with follow-up (Return Visit / Loose Ends / Needs Revisit)"
            >
              FU
            </span>
          </span>
          <span
            class="text-center text-[9px] text-slate-500 font-semibold"
            title="Low volume (<5 task credits in window); grade hidden to reduce noise"
          >
            LV
          </span>
          <span
            class="text-right font-semibold"
            style="color: rgb(234, 179, 8);"
          >
            75
            %
          </span>
          <span
            class="text-right text-slate-600"
          >
            —
          </span>
          <span
            class="text-right text-slate-400 whitespace-nowrap"
          >
            2.5 / 4
          </span>
          <span
            class="text-right font-semibold"
            style="color: rgb(34, 197, 94);"
          >
            100
            %
          </span>
          <span
            class="text-right text-green-500/50"
          >
            0
          </span>
          <span
            class="text-right text-slate-400"
          >
            2
          </span>
          <span
            class="text-right text-[10px] text-slate-400 font-mono whitespace-nowrap"
          >
            75
            <span
              class="text-slate-600"
            >
              =
            </span>
            <span
              class="font-semibold"
              style="color: rgb(239, 68, 68);"
            >
              75
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
